Fixed flex alignment on title and date

--- a/src/scss/elements/blogs.scss
+++ b/src/scss/elements/blogs.scss
@@ -46,7 +46,7 @@
 
 
     &:hover {
-        background-color: rgb(189, 189, 189, 0.4);
+        background-color: rgb(189, 189, 189, 0.3);
         cursor: pointer;
     }
 
@@ -121,11 +121,12 @@
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid rgb(196, 196, 196);
-    padding: 10px 0px;   
+    padding: 10px 0px;
 
     .blogtitledate-container {
         display: flex;
         justify-content: space-between;
+        align-items: flex-start;
         cursor: pointer;
         flex-direction: column;
 
@@ -135,10 +136,13 @@
 
         @include mixins.tablet-only {
             flex-direction: row;
+            align-items: center;
         }
 
         @include mixins.desktop-only {
             flex-direction: row;
+            padding: 10px 0px;
+            align-items: center;
         }
     }
 
